--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
+    "pre-commit": "lint-staged",
     "beautiful": "lint-staged",
     "start": "nodemon --inspect ./src/index.js",
     "watch": "node-sass --watch src/resources/scss/app.scss src/public/css/app.css",
